[bdist_wheel]
universal = 1

[metadata]
name = git-archive-all
author = Ilya Kulakov
author_email = kulakov.ilya@gmail.com
url = https://github.com/Kentzo/git-archive-all
description = Archive git repository with its submodules.
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Version Control
    Topic :: System :: Archiving
platforms = any
long_description = file: README.rst

[options]
zip_safe = 1
python_requires = >=2.6,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,

[tool:pytest]
addopts= --cov=git_archive_all --cov-report=term --cov-report=html --cov-branch
