[bdist_wheel]
universal = 1

[metadata]
name = git-archive-all
author = Ilya Kulakov
author_email = kulakov.ilya@gmail.com
url = https://github.com/Kentzo/git-archive-all
description = Archive git repository with its submodules.
license = MIT License
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Version Control
    Topic :: System :: Archiving
platforms =
    Darwin
    Linux
    Windows
long_description = file: README.rst

[options]
zip_safe = 1
python_requires = >=2.6,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,
tests_require =
    colorama==0.4.1; python_version >= "2.7" and python_version < "3.5"
    coverage==4.5.4; python_version < "3.5"
    importlib-metadata==0.23; python_version >= "2.7" and python_version < "3.5"
    more-itertools==7.2.0; python_version >= "3.4" and python_version < "3.5"
    pycodestyle==2.4.0; python_version < "2.7"
    pycodestyle==2.5.0; python_version >= "2.7"
    pytest==3.2.5; python_version < "2.7"
    pytest==4.6.6; python_version >= "2.7" and python_version < "3.5"
    pytest==5.2.2; python_version >= "3.5"
    pytest-cov==2.5.1; python_version < "2.7"
    pytest-cov==2.8.1; python_version >= "2.7"
    pytest-mock==1.6.3; python_version < "2.7"
    pytest-mock==1.11.2; python_version >= "2.7"
    setuptools==36.8.0; python_version < "2.7"
    zipp==1.1.0; python_version >= "2.7" and python_version < "3.6"

[tool:pytest]
addopts = --cov=git_archive_all --cov-report=term --cov-branch --showlocals -vv
filterwarnings = error

[tox:tox]
envlist =
    py26
    py27
    py34
    py35
    py36
    py37
    py38
    py39
    pypy
    pypy3
skipsdist = true

[testenv]
deps = -rtest-requirements.txt
commands = pytest {posargs}
tox_pyenv_fallback = false

[testenv:py26]
install_command = pip install {opts} {packages}
list_dependencies_command = pip freeze
